fix: fixed the overflow work for message request page

--- a/src/pages/MessageRequests/MessageRequests.module.less
+++ b/src/pages/MessageRequests/MessageRequests.module.less
@@ -27,6 +27,7 @@
     height: 75vh;
     > div {
         overflow-y: auto;
+        height: 100%;
     }
 }
 
